@@ -1,3 +1,9 @@
+2013-07-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/stm8/gen.c,
+	  support/regression/tests/compare.c:
+	  Fix handling of comparisons to immediates for stm8.
+
 2013-07-18 Philipp Klaus Krause <pkk AT spth.de>
 
 	* device/lib/_mullong.c:
